--- a/assets/style/supportStyle.css
+++ b/assets/style/supportStyle.css
@@ -3,6 +3,9 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    border-radius: 15px;
+    padding: 50px;
 }
 
 input {
